--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
         align-items: center;
         font-weight: 600;
         border-radius: 10px;
+        font-size: large;
       }
     
       .container {
@@ -67,7 +68,9 @@
         grid-gap: 10px;
     }
     .zero-button {
-        grid-column: 2;
+        grid-column: 1/ span 2;
+        width: 110px;
+        justify-content: flex-start;
     }
     
     .grey-buttons {
