--- a/style.css
+++ b/style.css
@@ -24,14 +24,19 @@
     }
 
     body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--main-background);
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     }
 
+    
     button {
-        height: 50px;
-        width: 50px;
+        height: 60px;
+        width: 60px;
         padding: 15px;
         border: none;
         cursor: pointer;
@@ -42,35 +47,57 @@
         font-weight: 600;
         border-radius: 10px;
         font-size: large;
-      }
+    }
     
-      .container {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 75vh;
-          min-height: 500px;
-          padding: 10px;
-          margin-top: 50px;
-      }
-      .calculator {
-        width: 350px;
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 75vh;
+        min-height: 500px;
+        padding: 10px;
+    }
+    
+    .calculator {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        width: 315px;
         height: 600px;
-        border-radius: 40px;
-        padding: 20px;
+        border-radius: 50px;
+        padding-bottom: 25px;
         background-color: var(--calculator-background);
-      }
+    }
+    
+    .display-screen {
+        display: flex;
+        justify-content: flex-end;
+        align-items: end;
+        height: 180px;
+        width: 280px;
+        margin-bottom: 350px;
+        padding: 10px;
+    }
+    .display-content {
+        font-size: 3rem;
+        color: var(--font);
+    }
 
-      .buttons-grid {
+    .buttons-grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         position: absolute;
         grid-gap: 10px;
+        
     }
     .zero-button {
         grid-column: 1/ span 2;
-        width: 110px;
+        width: 130px;
         justify-content: flex-start;
+        border-end-start-radius: 25px;
+    }
+    .equal-sign {
+        border-bottom-right-radius: 25px;
     }
     
     .grey-buttons {
@@ -84,6 +111,7 @@
     .orange-buttons {
         background-color: var(--btn-2);
         color: var(--font);
+        font-size: x-large;
     }
     
     
