--- a/style.css
+++ b/style.css
@@ -78,10 +78,12 @@
         width: 280px;
         margin-bottom: 350px;
         padding: 10px;
-    }
+    }   
     .screen-last {
-        font-size: 2rem;
-        color: var(--font);
+        align-self: center;
+        margin-bottom: 100px;
+        font-size: 1rem;
+        color: var(--btn-1);
         padding-bottom: 0;
     }
     .display-content {
@@ -130,7 +132,7 @@
         background-color: var(--btn-2-hover);
         color: #FF9500;
     }
-    .orange-buttons:active {
+    .orange-buttons:focus {
         background-color: var(--btn-2-hover);
         color: #FF9500;
     }
